# just_for_fun_binance

./: .gitignore  README.md  docker-compose.yml
cpp-api/: CMakeLists.txt  Dockerfile
cpp-api/src/: main.cpp
cpp-fetcher/: CMakeLists.txt  Dockerfile
cpp-fetcher/src/: main.cpp
db/: init.sql
frontend/: Dockerfile  next-env.d.ts  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
